[package]
name = "steve-bot"
version = "0.1.0"
edition = "2021"
authors = ["Giraugh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
tokio-cron-scheduler = "*"
